--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
     <main>
         <h1><span class="texto__grande">O FUTURO DA </span><br>  MOBILIDADE CHEGOU</h1>
+        <h2>Prove uma direção autônoma mais segura com Autono.</h2>
         
         <div>
             <img class="foto__carro" src="fundo.png" alt="">
