Melhorando a visibilidade das letras

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <source src="nuvem8.mp4" type="video/mp4">
             </video>
         </div>
+        <ul class="main__ul">
+            <li></li>
+        </ul>
     </main>
 
 
